# AUTONOMUS_SHRIMP_PLATFORM

./: .gitignore  README.md  frames_2026-03-15_15.03.31.gv  frames_2026-03-15_15.03.47.gv  frames_2026-05-03_16.26.24.gv  frames_2026-05-03_16.26.45.gv  frames_2026-05-03_17.25.50.gv  frames_2026-05-03_18.41.22.gv  frames_2026-05-04_20.53.28.gv  frames_2026-05-05_17.37.01.gv  frames_2026-05-05_18.02.30.gv  frames_2026-05-06_12.06.52.gv  log_pp_ackermann.txt  log_pp_corregido.txt  log_pp_mejorado.txt  log_pp_servos_reales.txt  plot_pp.py  shrimp.urdf
src/shrimp_modu/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/shrimp_modu/config/: controllers.yaml  ekf.yaml  nav2_params.yaml  navigate_through_poses_ackermann.xml  navigate_to_pose_ackermann.xml
src/shrimp_modu/launch/: nav2_shrimp.launch.py  shrimp_gazebo.launch.py
src/shrimp_modu/meshes/: base_link.stl  base_link1front_left_wheel1.stl  base_link1front_right_wheel1.stl  base_link1rear_left_wheel1.stl  base_link1rear_right_wheel1.stl  base_link1steering_link1.stl  base_link1steering_link1front_wheel1.stl  base_link1steering_link1wheel_link1.stl  base_link1steering_link21.stl  base_link1steering_link21back_wheel1.stl  front_left_wheel1.stl  front_right_wheel1.stl  rear_left_wheel1.stl  rear_right_wheel1.stl
src/shrimp_modu/shrimp_modu/: nav_debug_logger.py  nav_metrics_logger.py  navigate_to_pose_approach.py  odom_tf_node.py  odometry_full.py  pure_pursuit_node.py  shrimp_controller.py  trajectory.py
src/shrimp_modu/urdf/: shrimp.urdf
src/shrimp_modu/worlds/: .shrimp.wbproj  mundo_vacio_gazebo.sdf  (+1 more)
(+15 files in other folders)
