<?xml version="1.0"?>
<package format="3">
  <name>shrimp_modu</name>
  <version>0.0.0</version>
  <description>URDF del robot SHRIMP</description>

  <maintainer email="tu_email@example.com">Tu Nombre</maintainer>
  <license>Apache-2.0</license>

  <!-- ========================= -->
  <!-- DEPENDENCIAS -->
  <!-- ========================= -->

  <!-- Necesario para ROS2 -->
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
     <build_type>ament_python</build_type>
  </export>
</package>   
